--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ input[type="text"] {
     height: 21px;
     padding: 0 9px;
     border: 1px solid #dDd;
-    background: #FFF;
+    background: #fff;
     border-radius: 6px;
     font-family: Lato, sans-serif;
     color: #888;
@@ -84,7 +84,7 @@ input[type="text"]:focus {
 }
 
 /* New Task */
-label[for='new-task'] {
+label[for="new-task"] {
     display: block;
     margin: 0 0 20px;
 }
