--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* Basic Style */
-body {
+.page {
 background-color: #f8f8f8;
 color: #333;
 font-family: Lato, sans-serif;
@@ -12,11 +12,11 @@ display: block;
 text-align: right;
 }
 
-.aaa img {
+.aaa .img {
 width: 100%;
 }
 
-.aaa .more_inf {
+.aaa .more-inf {
 font-family: fantasy, cursive;
 }
 
@@ -42,22 +42,23 @@ flex-grow: 1;
 display: flex;
 }
 
-ul {
+.task-list {
 margin: 0;
 padding: 0px;
 }
 
-li,
-h3 {
+.task-list__item {
 list-style: none;
 }
 
-input,
-button{
+.task,
+.task-list__btn,
+.new-task__btn {
 outline: none;
 }
 
-button {
+.task-list__btn,
+.new-task__btn {
 background: none;
 border: 0px;
 color: #888;
@@ -67,13 +68,14 @@ font-family: Lato, sans-serif;
 cursor: pointer;
 }
 
-button:hover {
+.task-list__btn:hover,
+.new-task__btn:hover {
 color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for='new-task'] {
+.section__title,
+.new-task__label {
 color: #333;
 font-weight: 700;
 font-size: 15px;
@@ -83,7 +85,7 @@ margin: 0;
 text-transform: uppercase;
 }
 
-input[type="text"] {
+.task {
 margin: 0;
 font-size: 18px;
 line-height: 18px;
@@ -96,22 +98,22 @@ font-family: Lato, sans-serif;
 color: #888;
 }
 
-input[type="text"]:focus {
+.task:focus {
 color: #333;
 }
 
 /* New Task */
-label[for="new-task"] {
+.new-task__label {
 display: block;
 margin: 0 0 20px;
 }
 
-input#new-task {
+.task#new-task {
 width: 318px;
 }
 
 /* Task list */
-li {
+.task-list__item {
 overflow: hidden;
 padding: 20px 0;
 border-bottom: 1px solid #eee;
@@ -121,51 +123,47 @@ justify-content: space-between;
 align-items: center;
 }
 
-li > * {
-vertical-align: middle;
-}
-
-li > input[type="checkbox"] {
+.task-list__status {
 margin: 0 10px;
 }
 
-li > label {
+.task-list__label {
 padding-left: 10px;
 box-sizing: border-box;
 font-size: 18px;
 width: 226px;
 }
 
-li >    input[type="text"] {
+.task-list__item .task {
 width: 226px;
 }
 
-button.delete img {
+.task-list__btn-image {
 height: 2em;
 transform: rotateZ(45deg);
 transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.task-list__btn-image:hover {
 transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .task-list__label {
 text-decoration: line-through;
 color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task-list__item .task {
 display: none
 }
 
-ul li.editMode input[type=text] {
+.task-list__item.edit-mode .task {
 display: inline-block;
 width: 224px;
 }
 
-ul li.editMode label {
+ul li.edit-mode label {
 display: none;
 }
