--- a/style.css
+++ b/style.css
@@ -1,169 +1,169 @@
 /* Basic Style */
 .page {
-background-color: #f8f8f8;
-color: #333;
-font-family: Lato, sans-serif;
-}
-
-.aaa {
-width: 500px;
-margin: 0 auto;
-display: block;
-text-align: right;
-}
-
-.aaa .img {
-width: 100%;
-}
-
-.aaa .more-inf {
-font-family: fantasy, cursive;
-}
-
-@media (max-width: 768px) {
-.aaa {
-text-align: center;
-}
-
-}
-.centered-main-page-element {
-display: block;
-width: 500px;
-margin: 0 auto 0;
-}
-
-.task {
-width: 56%;
-display: inline-block;
-flex-grow: 1;
-}
-
-.task-row-wrapper {
-display: flex;
-}
-
-.task-list {
-margin: 0;
-padding: 0px;
-}
-
-.task-list__item {
-list-style: none;
-}
-
-.task,
-.task-list__btn,
-.new-task__btn {
-outline: none;
-}
-
-.task-list__btn,
-.new-task__btn {
-background: none;
-border: 0px;
-color: #888;
-font-size: 15px;
-width: 60px;
-font-family: Lato, sans-serif;
-cursor: pointer;
-}
-
-.task-list__btn:hover,
-.new-task__btn:hover {
-color: #3a3A3a;
-}
-
-/* Heading */
-.section__title,
-.new-task__label {
-color: #333;
-font-weight: 700;
-font-size: 15px;
-border-bottom: 2px solid #333;
-padding: 30px 0 10px;
-margin: 0;
-text-transform: uppercase;
-}
-
-.task {
-margin: 0;
-font-size: 18px;
-line-height: 18px;
-height: 21px;
-padding: 0 9px;
-border: 1px solid #dDd;
-background: #fff;
-border-radius: 6px;
-font-family: Lato, sans-serif;
-color: #888;
-}
-
-.task:focus {
-color: #333;
-}
-
-/* New Task */
-.new-task__label {
-display: block;
-margin: 0 0 20px;
-}
-
-.task#new-task {
-width: 318px;
-}
-
-/* Task list */
-.task-list__item {
-overflow: hidden;
-padding: 20px 0;
-border-bottom: 1px solid #eee;
-
-display: flex;
-justify-content: space-between;
-align-items: center;
-}
-
-.task-list__status {
-margin: 0 10px;
-}
-
-.task-list__label {
-padding-left: 10px;
-box-sizing: border-box;
-font-size: 18px;
-width: 226px;
-}
-
-.task-list__item .task {
-width: 226px;
-}
-
-.task-list__btn-image {
-height: 2em;
-transform: rotateZ(45deg);
-transition: transform 200ms ease-in;
-}
-
-.task-list__btn-image:hover {
-transform: rotateZ(0);
-}
-
-/* Completed */
-#completed-tasks .task-list__label {
-text-decoration: line-through;
-color: #888;
-}
-
-/* Edit Task */
-.task-list__item .task {
-display: none
-}
-
-.task-list__item.edit-mode .task {
-display: inline-block;
-width: 224px;
-}
-
-ul li.edit-mode label {
-display: none;
-}
+    background-color: #f8f8f8;
+    color: #333;
+    font-family: Lato, sans-serif;
+  }
+  
+  .header {
+    width: 500px;
+    margin: 0 auto;
+    display: block;
+    text-align: right;
+  }
+  
+  .header__img {
+    width: 100%;
+  }
+  
+  .header__link {
+    font-family: fantasy, cursive;
+  }
+  
+  @media (max-width: 768px) {
+    .aaa {
+      text-align: center;
+    }
+  }
+  
+  .main {
+    display: block;
+    width: 500px;
+    margin: 0 auto 0;
+  }
+  
+  .task-list__label {
+    width: 56%;
+    display: inline-block;
+    flex-grow: 1;
+  }
+  
+  .new-task {
+    display: flex;
+  }
+  
+  .task-list {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .task-list__item {
+    list-style: none;
+  }
+  
+  .task-input,
+  .btn {
+    outline: none;
+  }
+  
+  .btn {
+    background: none;
+    border: 0;
+    color: #888;
+    font-size: 15px;
+    width: 60px;
+    font-family: Lato, sans-serif;
+    cursor: pointer;
+  }
+  
+  .btn:hover {
+    color: #3a3A3a;
+  }
+  
+  /* Heading */
+  .section__title {
+    color: #333;
+    font-weight: 700;
+    font-size: 15px;
+    border-bottom: 2px solid #333;
+    padding: 30px 0 10px;
+    margin: 0;
+    text-transform: uppercase;
+  }
+  
+  .task-input {
+    margin: 0;
+    font-size: 18px;
+    line-height: 18px;
+    height: 21px;
+    padding: 0 9px;
+    border: 1px solid #dDd;
+    background: #fff;
+    border-radius: 6px;
+    font-family: Lato, sans-serif;
+    color: #888;
+    flex-grow: 1;
+  }
+  
+  .task-input:focus {
+    color: #333;
+  }
+  
+  /* New Task */
+  .new-task__label {
+    display: block;
+  }
+  
+  .section_add .section__title {
+    margin: 0 0 20px;
+  }
+  
+  .task-input_new {
+    width: 318px;
+  }
+  
+  /* Task list */
+  .task-list__item {
+    overflow: hidden;
+    padding: 20px 0;
+    border-bottom: 1px solid #eee;
+  
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .task-list__status {
+    margin: 0 10px;
+  }
+  
+  .task-list__label {
+    padding-left: 10px;
+    box-sizing: border-box;
+    font-size: 18px;
+    width: 226px;
+  }
+  
+  .task-list__task-input {
+    width: 226px;
+  }
+  
+  .btn__image {
+    height: 2em;
+    transform: rotateZ(45deg);
+    transition: transform 200ms ease-in;
+  }
+  
+  .btn__image:hover {
+    transform: rotateZ(0);
+  }
+  
+  /* Completed */
+  .section_completed .task-list__label {
+    text-decoration: line-through;
+    color: #888;
+  }
+  
+  /* Edit Task */
+  .task-list__task-input {
+    display: none;
+  }
+  
+  .task-list__item_edit .task-list__task-input {
+    display: inline-block;
+    width: 224px;
+  }
+  
+  .task-list__item_edit .task-list__label {
+    display: none;
+  }
